<resources>
    <string name="app_name">SEng Studio 1A</string>
    <string name="tv_first_name">First Name:</string>
    <string name="tv_last_name">Last Name:</string>
    <string name="tv_email">Email:</string>
    <string name="tv_phone">Phone Number (optional):</string>
    <string name="tv_password">Password:</string>
    <string name="tv_already_a_member">Already a member? Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="tv_password_hint">A password must be between 6-24 characters long and contain at least one lowercase and uppercase character, one number and one special character.</string>
    <string name="tv_error">!</string>
    <string name="tv_organisation">Organisation:</string>
    <string name="tv_no_account">No account? Register now</string>
    <string name="btn_login">Login</string>
    <string name="tv_bad_credentials">Incorrect username or password. Please remember to verify your email address.</string>
    <string name="tv_register_success">Your account has been registered successfully. Please verify your account by clicking the link in the verification email that has been sent to your email address.</string>
    <string name="btn_donor">Donor</string>
    <string name="btn_charity">Charity</string>
    <string name="btn_resend_link">Resend Link</string>
</resources>
